--- a/project.html
+++ b/project.html
@@ -199,33 +199,49 @@
     </section>
 
       <div class="gallery pt-5">
-        <a href="assets/images/livingroom/7ea51aa4-5200-4cab-b5e2-ac81a209891a.jpg" data-lightbox="project-gallery" data-title="Project Image 1">
-            <img src="assets/images/livingroom/7ea51aa4-5200-4cab-b5e2-ac81a209891a.jpg" alt="Project Image 1" class="gallery-img">
+        <a href="assets/images/livingroom/2.png" data-lightbox="project-gallery" data-title="Project Image 1">
+            <img src="assets/images/livingroom/2.png" alt="Project Image 1" class="gallery-img">
         </a>
-        <a href="assets/images/livingroom/30f17832-ddf8-4acc-8f0f-70926e8f67d9.jpg" data-lightbox="project-gallery" data-title="Project Image 2">
-            <img src="assets/images/livingroom/30f17832-ddf8-4acc-8f0f-70926e8f67d9.jpg" alt="Project Image 2" class="gallery-img">
+        <a href="assets/images/livingroom/3.png" data-lightbox="project-gallery" data-title="Project Image 2">
+            <img src="assets/images/livingroom/3.png" alt="Project Image 2" class="gallery-img">
         </a>
-        <a href="assets/images/livingroom/074f643c-eb8d-4b4f-a645-a88cbfe92834.jpg" data-lightbox="project-gallery" data-title="Project Image 3">
-            <img src="assets/images/livingroom/074f643c-eb8d-4b4f-a645-a88cbfe92834.jpg" alt="Project Image 3" class="gallery-img">
+        <a href="assets/images/livingroom/9.png" data-lightbox="project-gallery" data-title="Project Image 3">
+            <img src="assets/images/livingroom/9.png" alt="Project Image 3" class="gallery-img">
         </a>
-        <a href="assets/images/livingroom/99f59dc0-8499-4d70-8cf4-be90e87eeade.jpg" data-lightbox="project-gallery" data-title="Project Image 1">
-            <img src="assets/images/livingroom/99f59dc0-8499-4d70-8cf4-be90e87eeade.jpg" alt="Project Image 1" class="gallery-img">
+        <a href="assets/images/kitchen-services/9.png" data-lightbox="project-gallery" data-title="Project Image 1">
+            <img src="assets/images/kitchen-services/9.png" alt="Project Image 1" class="gallery-img">
         </a>
-        <a href="assets/images/livingroom/56671e39-796e-4e98-8d4f-2be137a8541d.jpg" data-lightbox="project-gallery" data-title="Project Image 2">
-            <img src="assets/images/livingroom/56671e39-796e-4e98-8d4f-2be137a8541d.jpg" alt="Project Image 2" class="gallery-img">
+        <a href="assets/images/kitchen-services/4.png" data-lightbox="project-gallery" data-title="Project Image 2">
+            <img src="assets/images/kitchen-services/4.png" alt="Project Image 2" class="gallery-img">
         </a>
-        <a href="assets/images/livingroom/0508025f-4aa8-4f85-af97-c3a393903683.jpg" data-lightbox="project-gallery" data-title="Project Image 3">
-            <img src="assets/images/livingroom/0508025f-4aa8-4f85-af97-c3a393903683.jpg" alt="Project Image 3" class="gallery-img">
+        <a href="assets/images/wardrobe/4.png" data-lightbox="project-gallery" data-title="Project Image 3">
+            <img src="assets/images/wardrobe/4.png" alt="Project Image 3" class="gallery-img">
         </a>
-        <a href="assets/images/livingroom/b7f2bedc-2f13-4909-9514-b77acba78cb3.jpg" data-lightbox="project-gallery" data-title="Project Image 1">
-            <img src="assets/images/livingroom/b7f2bedc-2f13-4909-9514-b77acba78cb3.jpg" alt="Project Image 1" class="gallery-img">
+        <a href="assets/images/wardrobe/9.png" data-lightbox="project-gallery" data-title="Project Image 1">
+            <img src="assets/images/wardrobe/9.png" alt="Project Image 1" class="gallery-img">
         </a>
-        <a href="assets/images/wardrobe/3e3d4e11-d4fc-4dfe-ae2a-cde3e550d3cd.jpg" data-lightbox="project-gallery" data-title="Project Image 2">
-            <img src="assets/images/wardrobe/3e3d4e11-d4fc-4dfe-ae2a-cde3e550d3cd.jpg" alt="Project Image 2" class="gallery-img">
+        <a href="assets/images/restarents/6.png" data-lightbox="project-gallery" data-title="Project Image 2">
+            <img src="assets/images/restarents/6.png" alt="Project Image 2" class="gallery-img">
         </a>
-        <a href="assets/images/tvunit/26ab1c99-ff85-43aa-844d-112a03b0a72e.jpg" data-lightbox="project-gallery" data-title="Project Image 3">
-            <img src="assets/images/tvunit/26ab1c99-ff85-43aa-844d-112a03b0a72e.jpg" alt="Project Image 3" class="gallery-img">
+        <a href="assets/images/commercial-office/9.png" data-lightbox="project-gallery" data-title="Project Image 3">
+            <img src="assets/images/commercial-office/9.png" alt="Project Image 3" class="gallery-img">
+
         </a>
+        <a href="assets/images/ceilingrooms/8.jpg" data-lightbox="project-gallery" data-title="Project Image 2">
+          <img src="assets/images/ceilingrooms/8.jpg" alt="Project Image 2" class="gallery-img">
+      </a>
+      <a href="assets/images/ceilingrooms/10.jpg" data-lightbox="project-gallery" data-title="Project Image 3">
+          <img src="assets/images/ceilingrooms/10.jpg" alt="Project Image 3" class="gallery-img">
+      </a>
+      <a href="assets/images/cafes/6.png" data-lightbox="project-gallery" data-title="Project Image 1">
+          <img src="assets/images/cafes/6.png" alt="Project Image 1" class="gallery-img">
+      </a>
+      <a href="assets/images/commercial-hospitals/2.png" data-lightbox="project-gallery" data-title="Project Image 2">
+          <img src="assets/images/commercial-hospitals/2.png" alt="Project Image 2" class="gallery-img">
+      </a>
+      <a href="assets/images/commercial-hospitals/5.png" data-lightbox="project-gallery" data-title="Project Image 3">
+          <img src="assets/images/commercial-hospitals/5.png" alt="Project Image 3" class="gallery-img">
+      </a>
     </div>
 
     <style>
