--- a/project.html
+++ b/project.html
@@ -220,6 +220,9 @@
         <a href="assets/images/wardrobe/9.png" data-lightbox="project-gallery" data-title="Project Image 1">
             <img src="assets/images/wardrobe/9.png" alt="Project Image 1" class="gallery-img">
         </a>
+        <a href="assets/images/wardrobe/17.png" data-lightbox="project-gallery" data-title="Project Image 3">
+          <img src="assets/images/wardrobe/17.png" alt="Project Image 3" class="gallery-img">
+      </a>
         <a href="assets/images/restarents/6.png" data-lightbox="project-gallery" data-title="Project Image 2">
             <img src="assets/images/restarents/6.png" alt="Project Image 2" class="gallery-img">
         </a>
@@ -242,6 +245,7 @@
       <a href="assets/images/commercial-hospitals/5.png" data-lightbox="project-gallery" data-title="Project Image 3">
           <img src="assets/images/commercial-hospitals/5.png" alt="Project Image 3" class="gallery-img">
       </a>
+      
     </div>
 
     <style>
@@ -297,8 +301,8 @@
 
       
 
-<footer>
-  <div class="p-5" style="background-color: black;">
+<footer class="pt-5">
+  <div class="p-5 " style="background-color: black;">
       <div class="row">
     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
       <div class="footer-logo">
