--- a/index.html
+++ b/index.html
@@ -1669,7 +1669,7 @@ color: white;
     <div class="content-box">
       <div class="text-block">
         <div class="icon-heading">
-          <i class="fas fa-home icon"></i>
+          <i class="fas fa-home icon text-white"></i>
           <!-- Replace with your icon image -->
           <h2 class="main-heading">Your ideal home is a click from reality</h2>
         </div>
