--- a/index.html
+++ b/index.html
@@ -467,10 +467,10 @@ p {
 
 <!--pooja-->
 <div class="services-btn">
-  <h4 class="text-center p-1 colo" data-aos="fade-left" data-aos-duration="1000">
+  <h4 class="text-center p-1 colo classic-heading" data-aos="fade-left" data-aos-duration="1000">
     Transform Your Space with Divine Pooja Units 
-    <i class="fas fa-oil-can icoo "></i> <!-- Living room icon -->
-</h4>
+    <i class="fas fa-oil-can icoo"></i>
+  </h4>
 
   <div class="container-fluid bg-pricing" data-aos="fade-right" data-aos-duration="1000">
     <div class="container-xxl">
@@ -481,31 +481,31 @@ p {
               <div class="">
                 <a href="images/pooja units/1.png" data-lightbox="mygallery"  data-title="Image 1">
                <img class="imgsss fade-in" src="images/pooja units/1.png"  alt=""></a>
-               <p class="text-center">Elegant Designs for Sacred Spaces
+               <p class="text-center three-d-text ">Elegant Designs for Sacred Spaces
                </p>
               </div>
               <div class="">
                 <a href="images/pooja units/2.png" data-lightbox="mygallery" data-title="Image 1">
               <img class="imgsss fade-in" src="images/pooja units/2.png" alt=""></a>
-              <p class="text-center">Custom Pooja Units that Blend Tradition 
+              <p class="text-center three-d-text ">Custom Pooja Units that Blend Tradition 
               </p>
               </div>
               <div class="">
                 <a href="images/pooja units/3.png" data-lightbox="mygallery" data-title="Image 1">
               <img class="imgsss fade-in" src="images/pooja units/3.png" alt=""></a>
-              <p class="text-center">Crafting Sanctuaries for Peaceful Worship
+              <p class="text-center three-d-text ">Crafting Sanctuaries for Peaceful Worship
                </p>
               </div>
               <div class="">
                 <a href="images/pooja units/6.png" data-lightbox="mygallery" data-title="Image 1">
                 <img class="imgsss fade-in" src="images/pooja units/6.png" alt=""></a>
-                <p class="text-center">Pooja Units to Elevate Your Home’s Aura
+                <p class="text-center three-d-text ">Pooja Units to Elevate Your Home’s Aura
                  </p>
                 </div>
                 <div class="">
                   <a href="images/pooja units/5.png" data-lightbox="mygallery" data-title="Image 1">
                   <img class="imgsss fade-in" src="images/pooja units/5.png" alt=""></a>
-                  <p class="text-center">Bring Spiritual Serenity to Your Interiors 
+                  <p class="text-center three-d-text ">Bring Spiritual Serenity to Your Interiors 
                    </p>
                   </div>
             </div>
@@ -530,7 +530,7 @@ p {
 
 <!--Living Room-->
 <div class="services-btn">
-  <h4 class="text-center p-1 colo">
+  <h4 class="text-center p-1 colo classic-heading">
     Design the Heart of Your Home: Stunning Living Rooms 
     <i class="fas fa-couch icoo"></i> <!-- Couch icon added here -->
   </h4>
@@ -544,31 +544,31 @@ p {
               <div class="">
                 <a href="images/livingrooms/2.png" data-lightbox="mygallery" data-title="Image 1">
                <img class="imgsss fade-in" src="images/livingrooms/2.png" alt=""></a>
-               <p class="text-center">Where Comfort Meets Style
+               <p class="text-center three-d-text ">Where Comfort Meets Style
                </p>
               </div>
               <div class="">
                 <a href="images/livingrooms/19.png" data-lightbox="mygallery" data-title="Image 1">
               <img class="imgsss fade-in" src="images/livingrooms/19.png" alt=""></a>
-              <p class="text-center">Living Spaces Designed for Your Lifestyle
+              <p class="text-center three-d-text ">Living Spaces Designed for Your Lifestyle
               </p>
               </div>
               <div class="">
                 <a href="images/livingrooms/18.png" data-lightbox="mygallery" data-title="Image 1">
               <img class="imgsss fade-in" src="images/livingrooms/18.png" alt=""></a>
-              <p class="text-center">Crafting Cozy, Elegant, and Functional Living Rooms
+              <p class="text-center three-d-text ">Crafting Cozy, Elegant, and Functional Living Rooms
                </p>
               </div>
               <div class="">
                 <a href="images/livingrooms/16.png" data-lightbox="mygallery" data-title="Image 1">
                 <img class="imgsss fade-in" src="images/livingrooms/16.png" alt=""></a>
-                <p class="text-center">Create a Luxurious Living Room
+                <p class="text-center three-d-text ">Create a Luxurious Living Room
                  </p>
                 </div>
                 <div class="">
                   <a href="images/livingrooms/8.png" data-lightbox="mygallery" data-title="Image 1">
                   <img class="imgsss fade-in" src="images/livingrooms/8.png" alt=""></a>
-                  <p class="text-center">Tailored Designs for the Perfect Gathering Space 
+                  <p class="text-center three-d-text ">Tailored Designs for the Perfect Gathering Space 
                    </p>
                   </div>
             </div>
@@ -594,7 +594,7 @@ p {
 
 <!--Kitchens Room-->
 <div class="services-btn">
-  <h4 class="text-center p-1 colo">
+  <h4 class="text-center p-1 colo classic-heading">
     Crafting Kitchens that Inspire Culinary Creativity 
     <i class="fas fa-utensils icoo"></i> <!-- Kitchen icon (utensils) added here -->
   </h4>
@@ -607,31 +607,31 @@ p {
               <div class="">
                 <a href="images/kitchen-hero/1.png" data-lightbox="mygallery" data-title="Image 1">
                <img class="imgsss fade-in" src="images/kitchen-hero/1.png" alt=""></a>
-               <p class="text-center">Functional, Stylish Kitchens for Every Home
+               <p class="text-center three-d-text ">Functional, Stylish Kitchens for Every Home
                </p>
               </div>
               <div class="">
                 <a href="images/kitchen-hero/2.png" data-lightbox="mygallery" data-title="Image 1">
               <img class="imgsss fade-in" src="images/kitchen-hero/2.png" alt=""></a>
-              <p class="text-center">Custom Kitchens Designed for Effortless Cooking
+              <p class="text-center three-d-text ">Custom Kitchens Designed for Effortless Cooking
               </p>
               </div>
               <div class="">
                 <a href="images/kitchen-hero/3.png" data-lightbox="mygallery" data-title="Image 1">
               <img class="imgsss fade-in" src="images/kitchen-hero/3.png" alt=""></a>
-              <p class="text-center">Blending Style and Efficiency in Every Kitchen Design
+              <p class="text-center three-d-text ">Blending Style and Efficiency in Every Kitchen Design
                </p>
               </div>
               <div class="">
                 <a href="images/kitchen-hero/4.png" data-lightbox="mygallery" data-title="Image 1">
                 <img class="imgsss fade-in" src="images/kitchen-hero/4.png" alt=""></a>
-                <p class="text-center">Tailored Kitchens to Match Your Culinary Lifestyle
+                <p class="text-center three-d-text ">Tailored Kitchens to Match Your Culinary Lifestyle
                  </p>
                 </div>
                 <div class="">
                   <a href="images/kitchen-hero/5.png" data-lightbox="mygallery" data-title="Image 1">
                   <img class="imgsss fade-in" src="images/kitchen-hero/5.png" alt=""></a>
-                  <p class="text-center">Creating Modern Kitchens with a Personal Touch
+                  <p class="text-center three-d-text ">Creating Modern Kitchens with a Personal Touch
                    </p>
                   </div>
             </div>
@@ -654,7 +654,7 @@ p {
 
 <!--Bedroom Room-->
 <div class="services-btn">
-  <h4 class="text-center p-1 colo">
+  <h4 class="text-center p-1 colo classic-heading">
     Create Your Perfect Retreat: Beautiful Bedrooms 
     <i class="fas fa-bed icoo"></i> <!-- Bedroom icon (bed) added here -->
   </h4>
@@ -668,31 +668,31 @@ p {
               <div class="">
                 <a href="images/bedroom-hero/2.png" data-lightbox="mygallery" data-title="Image 1">
                <img class="imgsss fade-in" src="images/bedroom-hero/2.png" alt=""></a>
-               <p class="text-center">Bedrooms Designed for Rest and Relaxation
+               <p class="text-center three-d-text ">Bedrooms Designed for Rest and Relaxation
                </p>
               </div>
               <div class="">
                 <a href="images/bedroom-hero/3.png" data-lightbox="mygallery" data-title="Image 1">
               <img class="imgsss fade-in" src="images/bedroom-hero/3.png" alt=""></a>
-              <p class="text-center">Tailored Comfort for Your Dream Bedroom
+              <p class="text-center three-d-text ">Tailored Comfort for Your Dream Bedroom
               </p>
               </div>
               <div class="">
                 <a href="images/bedroom-hero/5.png" data-lightbox="mygallery" data-title="Image 1">
               <img class="imgsss fade-in" src="images/bedroom-hero/5.png" alt=""></a>
-              <p class="text-center">Crafting Peaceful Sanctuaries for a Restful Night
+              <p class="text-center three-d-text ">Crafting Peaceful Sanctuaries for a Restful Night
                </p>
               </div>
               <div class="">
                 <a href="images/bedroom-hero/6.png" data-lightbox="mygallery" data-title="Image 1">
                 <img class="imgsss fade-in" src="images/bedroom-hero/6.png" alt=""></a>
-                <p class="text-center">Elegant, Cozy, and Functional Bedroom Designs
+                <p class="text-center three-d-text ">Elegant, Cozy, and Functional Bedroom Designs
                  </p>
                 </div>
                 <div class="">
                   <a href="images/bedroom-hero/1.png" data-lightbox="mygallery" data-title="Image 1">
                   <img class="imgsss fade-in" src="images/bedroom-hero/1.png" alt=""></a>
-                  <p class="text-center">Transform Your Bedroom into a Haven of Tranquility
+                  <p class="text-center three-d-text ">Transform Your Bedroom into a Haven of Tranquility
                    </p>
                   </div>
             </div>
@@ -714,56 +714,55 @@ p {
 <!--Bedroom Room-->
 
 
-<!--Wardrobe Room-->
+<!-- Updated Wardrobe Room Section -->
 <div class="services-btn pb-5">
-  <h4 class="text-center p-1 colo">
+  <h4 class="text-center p-1 colo classic-heading">
     Stylish Wardrobes for Organized Living 
-    <i class="fas fa-archive icoo"></i> <!-- Wardrobe icon (closet alternative) added here -->
+    <i class="fas fa-archive icoo"></i>
   </h4>
   <div class="container-fluid bg-pricing" data-aos="fade-right" data-aos-duration="1000">
     <div class="container-xxl">
       <div class="row">
         <div class="col-lg-12 pt-2 pb-lg-5">
-          <div class="pricing-text  p-1 ">
+          <div class="pricing-text p-1">
             <div class="owl-carousel pricing-carousel">
               <div class="">
-                <a href="images/wordrobereplace/1.pngg" data-lightbox="mygallery" data-title="Image 1">
-               <img class="imgsss fade-in" src="images/wordrobereplace/2.png" data-aos="fade-left" data-aos-duration="2000" alt=""></a>
-               <p class="text-center">Custom Wardrobes Tailored to Your Needs
-               </p>
+                <a href="images/wordrobereplace/1.png" data-lightbox="mygallery" data-title="Image 1">
+                  <img class="imgsss fade-in" src="images/wordrobereplace/2.png" data-aos="fade-left" data-aos-duration="2000" alt="">
+                </a>
+                <p class="text-center three-d-text">Custom Wardrobes Tailored to Your Needs</p>
               </div>
               <div class="">
                 <a href="images/wordrobereplace/2.png" data-lightbox="mygallery" data-title="Image 1">
-              <img class="imgsss fade-in" src="images/wordrobereplace/3.png" data-aos="fade-left" data-aos-duration="2000" alt=""></a>
-              <p class="text-center">Maximize Space with Functional Wardrobe Designs
-              </p>
+                  <img class="imgsss fade-in" src="images/wordrobereplace/3.png" data-aos="fade-left" data-aos-duration="2000" alt="">
+                </a>
+                <p class="text-center three-d-text">Maximize Space with Functional Wardrobe Designs</p>
               </div>
               <div class="">
                 <a href="images/wordrobereplace/3.png" data-lightbox="mygallery" data-title="Image 1">
-              <img class="imgsss fade-in" src="images/wordrobereplace/4.png" data-aos="fade-left" data-aos-duration="2000" alt=""></a>
-              <p class="text-center">Elegant Storage Solutions for a Clutter-Free Life
-               </p>
+                  <img class="imgsss fade-in" src="images/wordrobereplace/4.png" data-aos="fade-left" data-aos-duration="2000" alt="">
+                </a>
+                <p class="text-center three-d-text">Elegant Storage Solutions for a Clutter-Free Life</p>
               </div>
               <div class="">
                 <a href="images/wordrobereplace/4.png" data-lightbox="mygallery" data-title="Image 1">
-                <img class="imgsss fade-in" src="images/wordrobereplace/1.png" data-aos="fade-left" data-aos-duration="2000" alt=""></a>
-                <p class="text-center">Wardrobes that Combine Style and Practicality
-                 </p>
-                </div>
-                <div class="">
-                  <a href="images/wordrobereplace/5.png" data-lightbox="mygallery" data-title="Image 1">
-                  <img class="imgsss fade-in" src="images/wordrobereplace/5.png" data-aos="fade-left" data-aos-duration="2000" alt=""></a>
-                  <p class="text-center">Organized Wardrobes for Effortless Living
-                   </p>
-                  </div>
+                  <img class="imgsss fade-in" src="images/wordrobereplace/1.png" data-aos="fade-left" data-aos-duration="2000" alt="">
+                </a>
+                <p class="text-center three-d-text">Wardrobes that Combine Style and Practicality</p>
+              </div>
+              <div class="">
+                <a href="images/wordrobereplace/5.png" data-lightbox="mygallery" data-title="Image 1">
+                  <img class="imgsss fade-in" src="images/wordrobereplace/5.png" data-aos="fade-left" data-aos-duration="2000" alt="">
+                </a>
+                <p class="text-center three-d-text">Organized Wardrobes for Effortless Living</p>
+              </div>
             </div>
           </div>
           <div class="text-center view-more">
-            <a href="">
+            <a href="residential-services.html">
               <div class="button-block">
-                <button class="cta-button"><a href="residential-services.html">View More</a></button>
+                <button class="cta-button">View More</button>
               </div>
-
             </a>
           </div>
         </div>
@@ -771,7 +770,61 @@ p {
     </div>
   </div>
 </div>
-<!--Wardrobe Room-->
+
+
+<style>
+  /* Classic 3D Text Styling */
+  .classic-heading {
+    font-size: 2.8rem; /* Bold and prominent size */
+    font-family: 'Times New Roman', serif; /* Timeless classic font */
+    font-weight: bold;
+    color: #333; /* Elegant dark shade for sophistication */
+    text-shadow: 
+      2px 2px 0px #B5B5B5, /* Light shadow for a soft 3D edge */
+      4px 4px 0px #EDEDED; /* Deeper shadow for added depth */
+    letter-spacing: 1px; /* Clean spacing for readability */
+    text-transform: capitalize; /* Proper case for a refined look */
+  }
+
+  /* Optional Hover Effect for Subtle Interactivity */
+  .classic-heading:hover {
+    text-shadow: 
+      2px 2px 0px #999, 
+      4px 4px 0px #CFCFCF, 
+      6px 6px 0px #E6E6E6; /* Enhances depth slightly on hover */
+    transform: translateY(-2px); /* Gentle lift effect */
+    transition: all 0.3s ease; /* Smooth hover animation */
+    cursor: pointer;
+  }
+
+  /* Icon Styling */
+  .icoo {
+    font-size: 1.5rem; /* Icon size proportional to heading */
+    color: #666; /* Neutral color to complement the text */
+    margin-left: 10px;
+  }
+</style>
+
+
+<style>
+  .three-d-text {
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #333;
+    text-shadow: 2px 2px 4px #888, 4px 4px 8px #ccc, 6px 6px 12px rgba(0, 0, 0, 0.3);
+    transform: perspective(300px) rotateX(10deg);
+    letter-spacing: 1px;
+    margin-top: 10px;
+    font-family: 'Arial', sans-serif;
+  }
+
+  .three-d-text:hover {
+    text-shadow: 3px 3px 5px #666, 5px 5px 10px #aaa, 8px 8px 15px rgba(0, 0, 0, 0.5);
+    color: #D19A23;
+    transform: scale(1.05);
+    transition: all 0.3s ease-in-out;
+  }
+</style>
 
 
 </section>
@@ -790,14 +843,18 @@ p {
 
   /* Optional: You can also add hover effects */
   .imgsss:hover {
-    transform: scale(1.05); /* Slightly zoom in on hover */
+    transform: scale(1.00); /* Slightly zoom in on hover */
     transition: transform 0.3s ease; /* Smooth transition */
   }
   .imgsss{
+ 
     height: 400px !important;
     width:100% !important; 
     object-fit: cover;
     border-radius: 10px;
+    border: #0a0a0a solid 2px;
+ 
+
   }
  .view-more{
   display: grid;
