--- a/gallery.html
+++ b/gallery.html
@@ -176,9 +176,9 @@
 
 
     <section class="breadcrumb-section">
-      <img src="assets/images/lighting/cto_anvers_pendant_group_5.webp" class="breadcrumb-section-img" />
+      <img src="images/galleryimgss.jpg" class="breadcrumb-section-img" />
       <div class="bread-txt">
-        <h1>Our Gallery</h1>
+        <h1 class="text-black">Our Gallery</h1>
       </div>
 
     </section>
