--- a/packages.html
+++ b/packages.html
@@ -253,9 +253,9 @@
 
 
       <section class="breadcrumb-section">
-        <img src="images/bannerssimage/5.png" class="breadcrumb-section-img" />
+        <img src="images/packagebannrsimg.jpg" class="breadcrumb-section-img"/>
         <div class="bread-txt">
-          <h1>Packages</h1>
+          <h1 class="text-black">Packages</h1>
         </div>
         <div class="breadcrumb-content">
           <div aria-label="breadcrumb" class="bread">
