--- a/index.html
+++ b/index.html
@@ -1220,7 +1220,7 @@ color: white;
               <div class="form-section">
                   
               
-                  <form method="post" class="" action="//submit.form" onSubmit="return validateForm();"> 
+                  <form method="post" class="" action="//submit.form" onSubmit="return validateForm();">              
                     <h2 class="text-black">Contact Us</h2>
                     <div style="max-width: 400px;">
                     </div>
@@ -1381,37 +1381,27 @@ color: white;
       cursor: pointer;
   }
 
-  /* Bubble section styling */
-  .bubble-section {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      width: 40%;
-  }
-
-  .bubble-row {
-      display: flex;
-      justify-content: space-evenly;
-      margin-bottom: 10px;
-  }
-
+  /* Bubble styling for desktop */
   .bubble {
-    position: relative;
-    border-radius: 50%;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 5px solid black; /* Add white border */
-}
+      position: relative;
+      border-radius: 50%;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 5px solid black; /* Border for desktop view */
+      width: 100%;
+      height: auto;
+  }
 
-.bubble img {
-    width: 100%;
-    height: auto;
-    border-radius: 50%;
-}
+  .bubble img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 50%; /* Make the image circular */
+  }
 
-  /* Bubble sizes */
+  /* Bubble sizes for desktop */
   .bubble-large {
       width: 300px;
       height: 300px;
@@ -1420,6 +1410,23 @@ color: white;
   .bubble-small {
       width: 150px;
       height: 150px;
+  }
+
+  /* Responsive styling for mobile */
+  @media (max-width: 768px) {
+      .bubble {
+          border: none; /* Remove border for mobile */
+      }
+
+      .bubble-large {
+          width: 120px;
+          height: 120px;
+      }
+
+      .bubble-small {
+          width: 80px;
+          height: 80px;
+      }
   }
 
   /* Responsive styling for mobile */
