--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,7 @@ color: white;
   
 
  
-<section class="fixed-background mt-5" >
+<section class="fixed-background mt-5 p-5" >
   <div class="overlay">
       <div class="content">
          
