--- a/index.html
+++ b/index.html
@@ -1175,6 +1175,7 @@ color: white;
       display: flex;
       justify-content: center;
       margin-top: 20px;
+      display:none;
   }
   .buttons-container button {
       padding: 10px 20px;
