--- a/index.html
+++ b/index.html
@@ -1834,7 +1834,7 @@ color: white;
 
   .button-block {
     flex: 1;
-    max-width: 25%;
+    /* max-width: 25%; */
     display: flex;
     justify-content: center;
     animation: fadeInRight 1s ease-in-out;
